syntax = "proto3";
package recorder;

import "google/protobuf/timestamp.proto";
import "recorder/record.proto";

message RecordQuery {

  // 查詢起時
  google.protobuf.Timestamp ts_from = 1;
  // 查詢終時
  google.protobuf.Timestamp ts_to = 2;

  // 筆數
  optional int64 limit = 3;
  // 頁面
  optional int64 page = 4;

}

message FetchShiftRecordRequest {

  // 紀錄ID
  optional bytes record_id = 1;
  // 遊戲供應
  optional string supplier = 2;
  // 遊戲類型
  optional string game_type = 3;
  // 遊戲子類型
  optional string game_subtype = 4;
  // 遊戲代碼
  optional string game_code = 6;
  // 桌代碼
  optional string table_code = 7;
  // 班代碼
  optional string shift_code = 8;

  // 允許的紀錄ID
  repeated bytes record_ids = 24;
  // 允許的遊戲供應
  repeated string suppliers = 25;
  // 允許的遊戲類型
  repeated string game_types = 26;
  // 允許的遊戲子類型
  repeated string game_subtypes = 27;
  // 允許的遊戲代碼
  repeated string game_codes = 29;
  // 允許的桌代碼
  repeated string table_codes = 30;
  // 允許的班代碼
  repeated string shift_codes = 31;

  // 查詢限制
  RecordQuery query = 36;

}

message FetchShiftRecordResponse {
  repeated ShiftRecord shift_record = 1;
}

message FetchShoeRecordRequest {

  // 紀錄ID
  optional bytes record_id = 1;
  // 遊戲供應
  optional string supplier = 2;
  // 遊戲類型
  optional string game_type = 3;
  // 遊戲子類型
  optional string game_subtype = 4;
  // 遊戲代碼
  optional string game_code = 6;
  // 桌代碼
  optional string table_code = 7;
  // 班代碼
  optional string shift_code = 8;
  // 靴代碼
  optional string shoe_code = 10;

  // 允許的紀錄ID
  repeated bytes record_ids = 24;
  // 允許的遊戲供應
  repeated string suppliers = 25;
  // 允許的遊戲類型
  repeated string game_types = 26;
  // 允許的遊戲子類型
  repeated string game_subtypes = 27;
  // 允許的遊戲代碼
  repeated string game_codes = 29;
  // 允許的桌代碼
  repeated string table_codes = 30;
  // 允許的班代碼
  repeated string shift_codes = 31;
  // 允許的靴代碼
  repeated string shoe_codes = 33;

  // 查詢限制
  RecordQuery query = 36;

}

message FetchShoeRecordResponse {
  repeated ShoeRecord shoe_record = 1;
}

message FetchRoundRecordRequest {

  // 紀錄ID
  optional bytes record_id = 1;
  // 遊戲供應
  optional string supplier = 2;
  // 遊戲類型
  optional string game_type = 3;
  // 遊戲子類型
  optional string game_subtype = 4;
  // 遊戲代碼
  optional string game_code = 6;
  // 桌代碼
  optional string table_code = 7;
  // 班代碼
  optional string shift_code = 8;
  // 靴代碼
  optional string shoe_code = 10;
  // 局代碼
  optional string round_code = 12;

  // 允許的紀錄ID
  repeated bytes record_ids = 24;
  // 允許的遊戲供應
  repeated string suppliers = 25;
  // 允許的遊戲類型
  repeated string game_types = 26;
  // 允許的遊戲子類型
  repeated string game_subtypes = 27;
  // 允許的遊戲代碼
  repeated string game_codes = 29;
  // 允許的桌代碼
  repeated string table_codes = 30;
  // 允許的班代碼
  repeated string shift_codes = 31;
  // 允許的靴代碼
  repeated string shoe_codes = 33;
  // 允許的局代碼
  repeated string round_codes = 35;

  // 查詢限制
  RecordQuery query = 36;

}

message FetchRoundRecordResponse {
  repeated RoundRecord round_record = 1;
}

service RecorderReadService {
  
  // 讀取班次紀錄list
  rpc FetchShiftRecord(FetchShiftRecordRequest) returns (FetchShiftRecordResponse);

  // 讀取最新班次紀錄
  rpc FetchLastOneShiftRecord(FetchShiftRecordRequest) returns (FetchShiftRecordResponse);

  // 讀牌靴紀錄list
  rpc FetchShoeRecord(FetchShoeRecordRequest) returns (FetchShoeRecordResponse);

  // 讀最新牌靴紀錄
  rpc FetchLastOneShoeRecord(FetchShoeRecordRequest) returns (FetchShoeRecordResponse);

  // 讀遊戲局號紀錄list
  rpc FetchRoundRecord(FetchRoundRecordRequest) returns (FetchRoundRecordResponse);

  // 讀最新遊戲局號紀錄
  rpc FetchLastOneRoundRecord(FetchRoundRecordRequest) returns (FetchRoundRecordResponse);
}

enum GameNotifyType {

  // 未指定
  GAME_NOTIFY_TYPE_UNSPECIFIED = 0;

  // 通知遊戲供應狀況改變
  NOTIFY_GAME_PROVIDE_STATE_CHANGE = 1;

  // 通知遊戲流程荷官登入
  NOTIFY_GAME_DEALER_LOGIN = 6;

  // 通知遊戲流程荷官登出
  NOTIFY_GAME_DEALER_LOGOUT = 7;

  // 通知遊戲流程開始換靴，更換結束呼叫 NOTIFY_SHOE_START
  NOTIFY_GAME_CHANGING_SHOE = 8;

  // 通知遊戲班開始
  NOTIFY_SHIFT_START = 9;

  // 通知遊戲班結束
  NOTIFY_SHIFT_END = 10;

  // 通知新靴開始
  NOTIFY_SHOE_START = 11;

  // 通知此靴結束
  NOTIFY_SHOE_END = 12;

  // 新局開始
  NOTIFY_ROUND_START = 13;

  // 通知遊戲局開始下注
  NOTIFY_ROUND_BET = 14;

  // 通知遊戲局結束下注
  NOTIFY_ROUND_NO_MORE_BET = 15;

  // 通知遊戲局進行步驟
  NOTIFY_ROUND_STEP = 16;

  // 遊戲局完成
  NOTIFY_ROUND_FINISH = 17;

  // 通知遊戲局取消
  NOTIFY_ROUND_CANCEL = 18;

  // 通知遊戲局回放連結
  NOTIFY_ROUND_PLAYBACK = 19;

}

enum GameProvideState {

  // 未指定
  GAME_PROVIDE_STATE_UNSPECIFIED = 0;

  // 提供
  GAME_PROVIDE_AVAILABLE = 1;

  // 此局結束後維護
  GAME_PROVIDE_MAINTEN_AFTER_ROUND = 2;

  // 維護
  GAME_PROVIDE_IN_MAINTENANCE = 3;

  // 此局結束後關閉
  GAME_PROVIDE_CLOSE_AFTER_ROUND = 4;

  // 此局結束後關閉
  GAME_PROVIDE_CLOSE = 5;

  // 此局結束後關閉
  GAME_PROVIDE_AVAILABLE_AFTER_ROUND = 6;

}

// 直播資訊
message LiveStreamParams {

  // 串流代碼
  string code = 1;

  // 應用
  string app = 2;
  
  // 頻道
  string channel = 3;

}

// 遊戲供應
message GameProvide {

  // 遊戲供應
  string supplier = 2;

  // 遊戲類型
  string game_type = 3;

  // 遊戲子類型
  string game_subtype = 4;

  // 遊戲代碼
  string game_code = 6;

  // 標籤
  map<string, string> tags = 13;

  // 狀態
  GameProvideState state = 17;

  // 玩家入座
  map<int32, string> players = 25;

  // 附加媒體
  map<string, URLMedia> mideas = 28;

  // 直播參數
  map<string, LiveStreamParams> live_streams = 29;

  // 最後一局
  string last_round_code = 12;

}

message FetchGameProvideListRequest {

  // 平台
  string platform = 1;

}

message FetchGameProvideListResponse {
  
  // 桌列表
  repeated GameProvide game_provides = 1;

}

message CurrentGame {

  // 遊戲代碼
  string game_code = 5;

  // 班
  optional ShiftRecord shift = 7;

  // 遊戲局
  optional RoundRecord round = 9;

  // 靴
  optional ShoeRecord shoe = 10;

  // 附加媒體
  map<string, URLMedia> mideas = 28;

}

message FetchCurrentGameRequest {

  // 查詢的遊戲代號
  repeated string game_codes = 1;

  // 返回班表資訊
  bool shift = 7;

  // 返回牌靴資訊
  bool shoe = 10;

  // 返回直播網址
  bool stream = 3;
  
}

message FetchCurrentGameResponse {

  // Table Code 對應的當下 Current Table
  map<string, CurrentGame> map_current_games = 1;

  // 時間戳
  google.protobuf.Timestamp ts = 2;

}

message FetchGameProvideRequest {
  string platform = 1;

  string game_code = 2;
}

message FetchGameProvideResponse {
  
  // 桌列表
  GameProvide game_provide = 1;

}

message VerifyGameRequest {
  
  // 遊戲代碼
  string game_code = 1;

  // e1,e2,e3,e4,e5,e6,e7,e8,e9,e10,e11,e12
  repeated string pattern = 2;

  // 顯示名稱
  string name = 3;
  
}

message GetLiveStreamMediaRequest {

  // 遊戲代碼
  string game_code = 1;

  // 直播參數
  LiveStreamParams live_stream_params = 2;

  // 平台
  string platform_code = 8;

}

message GetLiveStreamMediaResponse {

  // 遊戲代碼
  string game_code = 1;

  // 附加媒體
  map<string, URLMedia> mideas = 28;

}

// 遊戲供應商需要開放出來的被動接口
service ProviderService {
  
  // 取得即時遊戲列表
  rpc FetchGameProvideList(FetchGameProvideListRequest) returns (FetchGameProvideListResponse);

  // 取得單一即時遊戲資訊
  rpc FetchGameProvide(FetchGameProvideRequest) returns (FetchGameProvideResponse);

  // 讀即時遊戲桌資訊
  rpc FetchCurrentGame(FetchCurrentGameRequest) returns (FetchCurrentGameResponse);

  // 驗證
  rpc VerifyGame(VerifyGameRequest) returns (FetchCurrentGameResponse);

  // 直播網址
  rpc GetLiveStreamMedia(GetLiveStreamMediaRequest) returns (GetLiveStreamMediaResponse);

}